Mus: Avoid deadlock during teardown

The display compositor blocks on the gpu thread to tear down. If
GpuServiceInternal tears down before display compositor has a chance
to tear down then Mus may crash during tear down or deadlock waiting
for a task to execute that never will.

BUG=668105
TBR=sadrul@chromium.org, sky@chromium.org
NOTRY=true
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2525213002
Cr-Commit-Position: refs/heads/master@{#434310}

Former-commit-id: 5059e49d0a21c1c311653c1613de16b27aefc963